# OpenGL_Prim-s_Algorithm

./: CMakeLists.txt  base.cpp  main  main.cpp  test.cpp
